<resources>
    <string name="app_name">Football Odds!</string>
    <string name="action_settings">Settings</string>
    <string name="matches">Matches</string>
    <string name="clubs">Clubs</string>

    <string name="club_name">Club name</string>
    <string name="dash">-</string>
    <string name="matchDate">Match date</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="name_of_the_club">Name of the club</string>
    <string name="playtime">play Time</string>
    <string name="odds_draw">Odds draw</string>
    <string name="odds_home">Odds home</string>
    <string name="odds_away">Odds away</string>
    <string name="my_matches">My Matches</string>
    <string name="pick_image">Pick image</string>
</resources>
