<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMatch">

    <ImageView
        android:id="@+id/ivDetailHomeTeam"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/ivDetailAwayTeam"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tvLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:text="@string/dash"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/ivDetailAwayTeam"
        app:layout_constraintStart_toEndOf="@+id/ivDetailHomeTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/abel"
        android:text="@string/matchDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailHomeTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abel"
        android:text="@string/home_team"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/ivDetailHomeTeam"
        app:layout_constraintStart_toStartOf="@+id/ivDetailHomeTeam"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailHomeTeam" />

    <TextView
        android:id="@+id/tvDetailAwayTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/abel"
        android:text="@string/away_team"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/ivDetailAwayTeam"
        app:layout_constraintStart_toStartOf="@+id/ivDetailAwayTeam"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailAwayTeam" />

</androidx.constraintlayout.widget.ConstraintLayout>