<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/tvHomeTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/abel"
        android:text="@string/home_team"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAwayTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/abel"
        android:text="@string/home_team"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAwayTeam"
        app:layout_constraintTop_toBottomOf="@+id/ivHomeTeam" />

    <ImageView
        android:id="@+id/ivHomeTeam"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:background="@drawable/round_outline" />

    <ImageView
        android:id="@+id/ivAwayTeam"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHomeTeam"
        app:srcCompat="@drawable/ic_launcher_background"
        android:background="@drawable/round_outline"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/abel"
        android:text="@string/playtime"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOddsDraw"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOddsDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/abel"
        android:text="@string/odds_draw"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvOddsAway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOddsHome" />

    <TextView
        android:id="@+id/tvOddsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/abel"
        android:text="@string/odds_home"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOddsAway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/abel"
        android:text="@string/odds_away"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>